fix contrast scroll to top btn

--- a/style.css
+++ b/style.css
@@ -451,11 +451,14 @@ nav .caret {
     margin: 0 0 5px 5px;
 }
 
-.btn-d,
+.btn-d {
+    background: #002242;
+}
+
 .btn-d:hover,
 .btn-d:focus {
     color: #FFF;
-    background: rgba(0, 0, 0, .3);
+    background: #004e95;
 }
 
 button {
